fixed mobile overlapping content

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,7 +117,7 @@ li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 0;
   height: 100vh;
 }
@@ -145,9 +145,8 @@ li {
 .about,
 .tech,
 .projects {
-  height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   text-align: center;
   flex-direction: column;
@@ -155,6 +154,7 @@ li {
 .about-copy,
 .tech-copy,
 .projects-copy {
+  margin-top: 4rem;
   width: 80vw;
   max-width: 800px;
 }
